--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,9 @@
     </head>
 
     <body>
-        <div class="container">
-            <div class="col-md-offset-3 col-md-5">
-                <form action="" method="POST" autocomplete="off">
+        <div class="container-fluid">
+            <div class="col-md-offset-1 col-md-3">
+                <form action="addData" method="POST" autocomplete="off">
                     {% csrf_token %}
                     <h3 class="page-header text-primary text-center">Register Here</h3>
                     <div class="form-group">
@@ -38,6 +38,36 @@
                     </div>
                 </form>
             </div>
+            <!-------------------------------------- View Data ------------------------------------------------------->
+            {% if mydata %}
+            <div class="col-md-6">
+                <h3 class="page-header text-primary text-center">View Students Data</h3>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>S.No</th>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Address</th>
+                            <th>Contact</th>
+                            <th>Mail</th>
+                        </tr>
+                    </thead>
+                    {% for data in mydata %}
+                        <tbody>
+                            <tr>
+                                <td>{{forloop.counter}}</td>
+                                <td>{{data.Name}}</td>
+                                <td>{{data.Age}}</td>
+                                <td>{{data.Address}}</td>
+                                <td>{{data.Contact}}</td>
+                                <td>{{data.Mail}}</td>
+                            </tr>
+                        </tbody>
+                    {% endfor %}
+                </table>
+            </div>
+            {% endif %}
         </div>
     </body>
 </html>
